hildon-application-manager (1:2.2.23~unreleased) unstable; urgency=low

  [ Gabriel Schulhof ]
  * Remove "Edit" button from repo list. repo list row-activate is now "Edit"
  * Move "Delete" button into the repo details dialog
  * Make all icons 48x48, centering smaller ones, and (unlikely) scaling larger ones

 -- Marius Vollmer <marius.vollmer@nokia.com>  Fri, 04 Jun 2009 21:52:00 +0100	

hildon-application-manager (1:2.2.22) unstable; urgency=low

  [ David Kedves ]
  * Fixes: NB#119941 - Installing progress bar shown along with Downloading failed info note.
  * Fixes: NB#120002 - 'Operation in progress' info note is seen after 'Checking for update' finishes.
  * Fixes: NB#115611 - ham-updates plugin crashes on unloading.
  
  [ Víctor Jáquez ]
  * 3rd party package policy for SSU.

 -- Marius Vollmer <marius.vollmer@nokia.com>  Fri, 04 Jun 2009 21:40:00 +0100	

hildon-application-manager (1:2.2.21-2) unstable; urgency=low

  * Release 2.2.21-2

 -- Marius Vollmer <marius.vollmer@nokia.com>  Fri, 02 Jun 2009 10:35:00 +0100	

hildon-application-manager (1:2.2.21-1) unstable; urgency=low

  * Release 2.2.21-1

 -- Marius Vollmer <marius.vollmer@nokia.com>  Fri, 01 Jun 2009 17:38:00 +0100	

hildon-application-manager (1:2.2.21) unstable; urgency=low

  [ Gabriel Schulhof ]
  * Make maemo-launcher binaries only if "nolauncher" flag is absent from DEB_BUILD_OPTIONS
  * Use new Hildon widgets.

  [ Marius Vollmer ]
  * Fixes: NB#117616 - Application manager, spelling error in category name "System".
  
  [ Richard Sun ]
  * Fixes: NB#106181 - Application Manager, string "?Catalogue" is shown in summary details.
  
  [ David Kedves ]
  * Fixes: NB#102050 - Check for updates view doesnt refresh.
  * Fixes: NB#102707 - Operation Failed info not comming along the connecting dialog.
  * Fixes: NB#118348 - L10N invalid logical IDs report.
  * Fixes: NB#103607 - Installing Certified from test repository should not pop legal disclamer dialog.