@@ -4,6 +4,7 @@ hildon-application-manager (1:2.2.23~unreleased) unstable; urgency=low
   * Remove "Edit" button from repo list. repo list row-activate is now "Edit"
   * Move "Delete" button into the repo details dialog
   * Make all icons 48x48, centering smaller ones, and (unlikely) scaling larger ones
+  * Show catalogue detail (a.k.a refresh error message) at the bottom of the details dialog
 
  -- Marius Vollmer <marius.vollmer@nokia.com>  Fri, 04 Jun 2009 21:52:00 +0100	
 
